weather-desktop (0.3.3); urgency=low

 * Fixed #52 - Removed N/A menu items from configuration menu
 * Added units and API key configuration menu items
 
-- Michael Spencer <spencers1993@gmail.com>  Sat, 01 Jun 2013 18:46:51 -0500 
 

weather-desktop (0.3.2); urgency=low

 * Fixed #39 - Added hourly forecasts

-- Michael Spencer <spencers1993@gmail.com>  Sat, 01 Jun 2013 14:09:38 -0500


weather-desktop (0.3.1); urgency=low

 * Added ability to enter API key on first run (if not hardcoded)
 * Updated CPack debian packaging info
 * Fixed #51 - Fixed display of license in the about dialog
 * Fixed #54 - Show the high and low for the day in the location tile's forecast
 
-- Michael Spencer <spencers1993@gmail.com>  Fri, 31 May 2013 21:05:29 -0500


weather-desktop (0.3); urgency=medium

 * Fixed #40 - Added UI for overview of today's weather
 * Fixed #45 - Moved handling of errors and refreshing into background
 * Fixed #20 - Added a startup animation
 * Added weather-based backgrounds
 * Redesigned UI
 * Fixed bug in Forecast's data block code
 * Fixed #35 - Fixed the way changing the units works
 * Fixed #32 - Weather tiles update after weather refreshes
 * Fixed #29 - Added mini menu and empty configuration dialog
 * Fixed #30 - Access times are now stored in UTC
 * Added forecasts backend in Forecast.io and UI for daily forecasts

-- Michael Spencer <spencers1993@gmail.com>  Thu, 30 May 2013 13:16:10 -0500


weather-desktop (0.2); urgency=medium

 * Refactored weather code
 * Better usage limits
 * Added new backend for Forecast.io
 * Added Metric & English Units
 * New location UI
 * Fixed some minor bugs.

-- Michael Spencer <spencers1993@gmail.com>  Fri, 24 May 2013 18:29:24 -0500


weather-desktop (0.1); urgency=high

 * Initial version

-- Michael Spencer <spencers1993@gmail.com>  Tue, 14 May 2013 19:47:37 -0500